--- a/.circleci/artifacts.yml
+++ b/.circleci/artifacts.yml
@@ -2,6 +2,7 @@ job_environments:
   common_environment: &common_environment
     APP_HOSTPATH: test-deimos
     CONTAINER_PREFIX: planet4-test-deimos
+    WP_DB_NAME_PREFIX: planet4-testdeim_wordpress
   develop_environment: &develop_environment
     APP_ENVIRONMENT: development
     APP_HOSTNAME: k8s.p4.greenpeace.org
