Use lazyload backstop

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ job_environments:
 job_definitions:
   visualtests_reference_steps: &visualtests_reference_steps
     docker:
-      - image: greenpeaceinternational/planet4-backstop:latest
+      - image: greenpeaceinternational/planet4-backstop:lazyload
     working_directory: /src
     steps:
       - run: ./checkout.sh
@@ -42,7 +42,7 @@ job_definitions:
 
   visualtests_compare_steps: &visualtests_compare_steps
     docker:
-      - image: greenpeaceinternational/planet4-backstop:latest
+      - image: greenpeaceinternational/planet4-backstop:lazyload
     working_directory: /src
     parameters:
       notify:
