--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ job_environments:
     APP_HOSTPATH: test-deimos
     CONTAINER_PREFIX: planet4-test-deimos
     WP_DB_NAME_PREFIX: planet4-testdeim_wordpress
+    WP_VERSION: 5.6-RC1
   develop_environment: &develop_environment
     APP_ENVIRONMENT: development
     APP_HOSTNAME: www-dev.greenpeace.org
