use image 1817 and alpha2 chart

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ docker_auth: &docker_auth
 
 defaults: &defaults
   docker:
-    - image: greenpeaceinternational/p4-builder:latest
+    - image: greenpeaceinternational/p4-builder:1817
       auth:
         <<: *docker_auth
 
@@ -33,6 +33,7 @@ job_environments:
     HELM_RELEASE: planet4-test-deimos
     WP_DB_NAME: planet4-testdeim_wordpress_develop
     WP_STATELESS_BUCKET: planet4-test-deimos-stateless-develop
+    CHART_VERSION: 0.8.24-alpha2
 
 
 commands:
